# wxpg

./: Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
src/: app.rs  components.rs  lib.rs  main.rs  modules.rs  pass_ext.rs  render.rs  resources.rs  screens.rs  tests.rs  util.rs  widgets.rs
src/modules/: asset_server.rs  commands.rs  default_pipeline.rs  egui_renderer.rs  glyphon_renderer.rs  input_server.rs  render_server.rs  render_storage.rs
src/primitives/: cube.rs
src/render/: camera.rs  instance_data.rs  material.rs  mesh.rs  model.rs  model_mesh.rs  multi_indexed_mesh.rs  phantom_mesh.rs  pipeline_system.rs  texture.rs  vertex.rs
src/render/as_meshes/: cube.rs
src/resources/: asset_server.rs  commands.rs  default_pipeline.rs  egui_renderer.rs  frame_context.rs  glyphon_renderer.rs  input.rs  input_server.rs  render_server.rs  screen_server.rs
src/screens/: game.rs  menu.rs  screen.rs
src/widgets/: fps_visualizer.rs
