[package]
name = "wxpg"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { version = "0.30.5", features = ["rwh_06"] }
env_logger = "0.10"
log = "0.4"
wgpu = { version = "22.1", features = ["webgl"] }
pollster = "0.3.0"
cfg-if = "1.0.0"
bytemuck = { version = "1.16.1", features = ["derive"] }
cgmath = "0.18"
image = { version = "0.25.1", default-features = false, features = ["png", "jpeg"] }
tobj = "4.0.2"
bevy_ecs = "0.14.0"
glyphon = { git = "https://github.com/grovesNL/glyphon" }
egui = "0.29.0"
egui-wgpu = "0.29.0"
egui-winit = "0.29.0"
rand = "0.8.5"
binary-greedy-meshing = "0.3.5"
egui_plot = "0.28.1"


[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[lib]
crate-type = ["cdylib", "rlib"]
